deployments/simple-deployment/debug-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: simple-deployment
  labels:
    app.kubernetes.io/name: debug-pod
    app.kubernetes.io/instance: almalinux-base
    app.kubernetes.io/version: "9"
    app.kubernetes.io/component: debug-container
    app.kubernetes.io/part-of: django-k8s-demo
    app.kubernetes.io/managed-by: kubectl
spec:
  containers:
    - image: quay.io/almalinuxorg/9-base:latest
      command:
        - sleep
        - "43200"
      imagePullPolicy: IfNotPresent
      name: toolbox
      resources: {}
  restartPolicy: Always
