deployments/simple-deployment/postgres-statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: simple-deployment
  labels:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: server
    app.kubernetes.io/version: "16"
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: django-k8s-demo
    app.kubernetes.io/managed-by: kubectl
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: postgresql
      app.kubernetes.io/instance: server
  serviceName: db
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app.kubernetes.io/name: postgresql
        app.kubernetes.io/instance: server
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: postgresql-server
        image: docker.io/library/postgres:16
        resources:
            requests:
              memory: "40Mi"
              cpu: "20m"
            limits:
              cpu: "200m"
              memory: "200Mi"
        ports:
          - containerPort: 5432
        volumeMounts:
          - name: db-volume
            mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db-volume
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "local-path"
      resources:
        requests:
          storage: 1Gi
