deployments/simple-deployment/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: simple-deployment
spec:
  ports:
    - protocol: TCP
      name: postgresql
      port: 5432
      targetPort: 5432
  selector:
    app.kubernetes.io/name: postgresql
    app.kubernetes.io/instance: server
