deployments/simple-deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: simple
  namespace: simple-deployment
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 8000
  selector:
    app.kubernetes.io/name: django
    app.kubernetes.io/instance: simple
