deployments/simple-deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: simple-deployment
spec:
  ingressClassName: nginx
  rules:
    - host: "dk8sdemo.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: simple
                port:
                  number: 80
