deployments/simple-deployment/network-policy-debug-pod-allow-to-django.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: toolbox-allow-to-postgresql-server
  namespace: simple-deployment
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: debug-pod
  policyTypes:
    - Egress
  egress:
    - to:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: postgresql
            app.kubernetes.io/instance: server
      ports:
        - protocol: TCP
          port: 5432
