deployments/simple-deployment/network-policy-debug-pod-allow-to-internet.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: toolbox-allow-to-internet
  namespace: simple-deployment
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: debug-pod
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
