deployments/simple-deployment/network-policy-django-allow-from-debug-pod.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: django-allow-from-debug-pod
  namespace: simple-deployment
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: django
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: debug-pod
      ports:
        - protocol: TCP
          port: 8000
