deployments/simple-deployment/network-policy-django-allow-to-pg.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: django-allow-to-postgresql
  namespace: simple-deployment
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: django
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: server
              app.kubernetes.io/name: postgresql
      ports:
        - protocol: TCP
          port: 5432
