deployments/simple-deployment/network-policy-postgresql-allow-from-django.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgresql-allow-from-django
  namespace: simple-deployment
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: server
      app.kubernetes.io/name: postgresql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: django
      ports:
        - protocol: TCP
          port: 5432
